# DDE

./: .gitignore  Dockerfile  README.md  data_loader.py  pyproject.toml  updated_data.csv  write_to_db.py
api_example/: README.md  api_reader.py
dde_project/: data_loader.py  pyproject.toml
etl/: README.md  __init__.py  extract.py  load.py  main.py  transform.py  validate.py
labs/api_example/: README.md
labs/parse_example/: README.md
notebooks/: EDA.ipynb  visual.ipynb
parse_example/: README.md  data_parser.py
